chore: category, discountType enum으로 변경, 쿼리 수정